hypershift-toolkit: add kube conformance job

--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-master.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-master.yaml
@@ -30,3 +30,7 @@ tests:
   commands: make verify
   container:
     from: src
+- as: kube-conformance-aws
+  commands: contrib/hack/e2e-kube-conformance.sh
+  openshift_installer_src:
+    cluster_profile: aws
