fix secret name

--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
@@ -39,6 +39,6 @@ tests:
   container:
     from: iks
   secret:
-    name: 'ibm-gate-test-secrets'
+    name: 'test-secrets'
     mount_path: '/usr/test-secrets/'
 
