--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-presubmits.yaml
@@ -41,20 +41,20 @@ presubmits:
           requests:
             cpu: 10m
         volumeMounts:
-        - mountPath: /usr/test-secrets/
-          name: ibm-gate-test-secrets
-          readOnly: true
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
+        - mountPath: /usr/test-secrets/
+          name: test-secrets
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
-      - name: ibm-gate-test-secrets
-        secret:
-          secretName: ibm-gate-test-secrets
       - name: sentry-dsn
         secret:
           secretName: sentry-dsn
+      - name: test-secrets
+        secret:
+          secretName: test-secrets
     trigger: (?m)^/test( | .* )create-cluster,?($|\s.*)
   - agent: kubernetes
     always_run: true
