Fix configresolver service

--- a/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
+++ b/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
@@ -16,6 +16,7 @@ items:
       protocol: TCP
       targetPort: main
     - name: ui
+      port: 8082
       protocol: TCP
       targetPort: ui
     - name: metrics
