--- a/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
+++ b/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
@@ -32,7 +32,7 @@ items:
     labels:
       app: prow
       component: ci-operator-configresolver
-    name: ci-operator-configresolver
+    name: ci-operator-configresolver-ui
     namespace: ci
   spec:
     host: steps.svc.ci.openshift.org
@@ -41,6 +41,20 @@ items:
       termination: edge
     port:
       targetPort: ui
+    to:
+      kind: Service
+      name: ci-operator-configresolver
+- apiVersion: route.openshift.io/v1
+  kind: Route
+  metadata:
+    labels:
+      app: prow
+      component: ci-operator-configresolver
+    name: ci-operator-configresolver
+    namespace: ci
+  spec:
+    port:
+      targetPort: main
     to:
       kind: Service
       name: ci-operator-configresolver
@@ -86,13 +100,6 @@ items:
           app: prow
           component: ci-operator-configresolver
       spec:
-        ports:
-        - name: main
-          containerPort: 8080
-        - name: ui
-          containerPort: 8082
-        - name: metrics
-          containerPort: 9090
         containers:
         - name: ci-operator-configresolver
           image: ci-operator-configresolver:latest
@@ -102,6 +109,13 @@ items:
           - -flat-registry
           - -log-level=debug
           - -cycle=2m
+          ports:
+          - name: main
+            containerPort: 8080
+          - name: ui
+            containerPort: 8082
+          - name: metrics
+            containerPort: 9090
           livenessProbe:
             httpGet:
               path: /healthz
