installer templates to limit destroy calls to 30 minutes
Prior to this change, destroy cluster would occasionally get suck in a
loop on the gcp platform. This caused ci to reach max time and never
collect logs from the failed teardown.

This change uses the timeout command to limit these calls to 30m. As a
result, the failure should be captured in the logs and the logs properly
added to the archive.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
@@ -581,7 +581,8 @@ objects:
           sed 's|ovirt_cafile: ""|ovirt_cafile: /tmp/artifacts/installer/ovirt-engine.ca|' -i /tmp/artifacts/installer/ovirt-config.yaml
 
           echo "Destroy cluster ..."
-          openshift-install --dir /tmp/artifacts/installer destroy cluster
+          # Timeout after 30m to avoid continuous loop
+          timeout 30m openshift-install --dir /tmp/artifacts/installer destroy cluster
         }
 
         trap 'teardown; exit $DELETE_FAIL' EXIT
