--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -882,7 +882,8 @@ objects:
           wait
 
           echo "Deprovisioning cluster ..."
-          openshift-install --dir /tmp/artifacts/installer destroy cluster
+          # Timeout after 30m to avoid continuous loop
+          timeout 30m openshift-install --dir /tmp/artifacts/installer destroy cluster
         }
 
         trap 'teardown' EXIT
