--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
@@ -576,7 +576,8 @@ objects:
           openstack floating ip list --long -f csv -c Description -c "Floating IP Address" | grep $CLUSTER_NAME | cut -f1 -d "," | xargs openstack floating ip delete
 
           echo "Deprovisioning cluster ..."
-          openshift-install --dir /tmp/artifacts/installer destroy cluster
+          # Timeout after 30m to avoid continuous loop
+          timeout 30m openshift-install --dir /tmp/artifacts/installer destroy cluster
         }
 
         # We have to truncate cluster name to 14 chars, because there is a limitation in the install-config
