--- a/ci-operator/config/openshift/installer/openshift-installer-release-4.2.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-release-4.2.yaml
@@ -25,7 +25,7 @@ images:
       - builder
       paths: null
   to: installer-artifacts
-- dockerfile_path: images/nested-libvirt/Dockerfile
+- dockerfile_path: images/libvirt/Dockerfile.ci
   from: base
   inputs:
     root:
