--- a/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-postsubmits.yaml
+++ b/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-postsubmits.yaml
@@ -13,8 +13,12 @@ postsubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
+        - --org=integr8ly
+        - --repo=integreatly-operator
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=e2e
