--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -106,6 +106,9 @@ approve:
 - repos:
   - openshift/cluster-csi-snapshot-controller-operator
   require_self_approval: false
+- repos:
+  - openshift/csi-driver-nfs
+  require_self_approval: false
 blunderbuss:
   max_request_count: 2
   request_count: 2
@@ -1269,6 +1272,9 @@ lgtm:
 - repos:
   - openshift/cluster-csi-snapshot-controller-operator
   review_acts_as_lgtm: true
+- repos:
+  - openshift/csi-driver-nfs
+  review_acts_as_lgtm: true
 override:
   allow_top_level_owners: true
 owners:
@@ -2010,6 +2016,8 @@ plugins:
   openshift/crd-schema-gen:
   - approve
   openshift/csi-cluster-driver-registrar:
+  - approve
+  openshift/csi-driver-nfs:
   - approve
   openshift/csi-driver-registrar:
   - approve
