unset GOFLAGS on e2e tests for intly operator

--- a/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-postsubmits.yaml
+++ b/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-postsubmits.yaml
@@ -32,7 +32,7 @@ postsubmits:
         - name: JOB_NAME_SAFE
           value: e2e
         - name: TEST_COMMAND
-          value: make test/e2e
+          value: unset GOFLAGS && make test/e2e/prow
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
