--- a/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-presubmits.yaml
@@ -40,7 +40,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e
         - name: TEST_COMMAND
-          value: make test/e2e/prow
+          value: unset GOFLAGS && make test/e2e/prow
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -110,7 +110,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-olm
         - name: TEST_COMMAND
-          value: make test/e2e/olm
+          value: unset GOFLAGS && make test/e2e/olm
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
