change to test/e2e/prow

--- a/ci-operator/config/integr8ly/heimdall/integr8ly-heimdall-master.yaml
+++ b/ci-operator/config/integr8ly/heimdall/integr8ly-heimdall-master.yaml
@@ -58,7 +58,7 @@ tests:
   container:
     from: src
 - as: e2e
-  commands: make test/e2e
+  commands: make test/e2e/prow
   secret:
     name: integr8ly-ci-secrets
     mount_path: /usr/local/integr8ly-ci-secrets
