installer: add temporary multi-stage test
This test will eventually replace the template-based E2E test.  For now,
it is added with a temporary name and `skip_report: true` so that it can
be improved incrementally and collect real execution results.

--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -197,3 +197,7 @@ tests:
   commands: TEST_SUITE=openshift/conformance/parallel run-tests
   openshift_installer_upi:
     cluster_profile: vsphere
+- as: e2e-steps
+  steps:
+    cluster_profile: aws
+    workflow: ipi
