--- a/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-master__4.3.yaml
+++ b/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-master__4.3.yaml
@@ -37,4 +37,4 @@ images:
   to: knative-openshift-ingress
 - context_dir: knative-operator
   from: base
-  to: knative-serving-openshift
+  to: knative-operator
