--- a/core-services/sshd-bastion/ppc64le/deployment.yaml
+++ b/core-services/sshd-bastion/ppc64le/deployment.yaml
@@ -17,15 +17,24 @@ items:
     - name: openstack-auth
       port: 5000
       targetPort: openstack-auth
-    - name: api
+    - name: openshift-api
       port: 6443
-      targetPort: api
-    - name: http
-      port: 80
-      targetPort: http
-    - name: https
-      port: 443
-      targetPort: https
+      targetPort: openshift-api
+    - name: openstack-nova
+      port: 8774
+      targetPort: openstack-nova
+    - name: openstack-cinder
+      port: 8776
+      targetPort: openstack-cinder
+    - name: openstack-swift
+      port: 8080
+      targetPort: openstack-swift
+    - name: openstack-glance
+      port: 9292
+      targetPort: openstack-glance
+    - name: openstack-neutron
+      port: 9696
+      targetPort: openstack-neutron
     type: ClusterIP
 - apiVersion: apps/v1
   kind: Deployment
@@ -62,13 +71,17 @@ items:
             - name: ssh
               containerPort: 2222
             - name: openstack-auth
-              containerPort: 5555
-            - name: api
-              containerPort: 6666
-            - name: http
-              containerPort: 8888
-            - name: https
+              containerPort: 3333
+            - name: openshift-api
               containerPort: 4444
+            - name: openstack-nova
+              containerPort: 5555
+            - name: openstack-cinder
+              containerPort: 6666
+            - name: openstack-glance
+              containerPort: 7777
+            - name: openstack-neutron
+              containerPort: 8888
           volumeMounts:
           - name: authorized-keys
             mountPath: /keys/authorized
