Fix validate violations

--- a/core-services/base-ci-images/images-origin.yaml
+++ b/core-services/base-ci-images/images-origin.yaml
@@ -75,6 +75,7 @@ apiVersion: image.openshift.io/v1
 metadata:
   namespace: origin
   name: release
+spec: {}
 ---
 kind: ImageStream
 apiVersion: image.openshift.io/v1
