--- a/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
+++ b/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
@@ -44,6 +44,10 @@ items:
     to:
       kind: Service
       name: ci-operator-configresolver
+      weight: 100
+  status:
+    ingress:
+    - host: steps.svc.ci.openshift.org
 - apiVersion: route.openshift.io/v1
   kind: Route
   metadata:
@@ -53,11 +57,16 @@ items:
     name: ci-operator-configresolver
     namespace: ci
   spec:
+    host: ci-operator-configresolver-ci.svc.ci.openshift.org
     port:
       targetPort: main
     to:
       kind: Service
       name: ci-operator-configresolver
+      weight: 100
+  status:
+    ingress:
+    - host: ci-operator-configresolver-ci.svc.ci.openshift.org
 - apiVersion: monitoring.coreos.com/v1
   kind: ServiceMonitor
   metadata:
