--- a/core-services/prow/03_deployment/hook.yaml
+++ b/core-services/prow/03_deployment/hook.yaml
@@ -7,6 +7,7 @@ items:
     namespace: ci
     name: hook
   spec:
+    host: hook-ci.svc.ci.openshift.org
     port:
       targetPort: 8888
     path: /hook
@@ -16,6 +17,10 @@ items:
     to:
       kind: Service
       name: hook
+      weight: 100
+  status:
+    ingress:
+    - host: hook-ci.svc.ci.openshift.org
 - apiVersion: v1
   kind: Service
   metadata:
