--- a/core-services/base-ci-images/images-ocp.yaml
+++ b/core-services/base-ci-images/images-ocp.yaml
@@ -187,9 +187,11 @@ apiVersion: image.openshift.io/v1
 metadata:
   namespace: ocp-s390x
   name: release-s390x
+spec: {}
 ---
 kind: ImageStream
 apiVersion: image.openshift.io/v1
 metadata:
   namespace: ocp-ppc64le
   name: release-ppc64le
+spec: {}
