hypershift-toolkit: config container fix
fix tabs

use from and change container name

remove s

--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
@@ -29,6 +29,9 @@ tag_specification:
 images:
 - from: base
   to: hypershift-toolkit
+- dockerfile_path: DockerCITest
+  from: iks
+  to: iks-deploy
 tests:
 - as: verify
   commands: make verify
@@ -37,7 +40,7 @@ tests:
 - as: create-cluster
   commands: ./deploy_ci.sh
   container:
-    from: iks
+    from: iks-deploy
   secret:
     name: 'ibm-gate-test-secrets'
     mount_path: '/usr/ibm-gate-test-secrets/'
