switch console 4.4+4.5 jobs to use custom-test-image template

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.5-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.5-periodics.yaml
@@ -3237,12 +3237,13 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --secret-dir=/usr/local/pull-secret
-      - --secret-dir=/usr/local/e2e-aws-console-cluster-profile
-      - --target=e2e-aws-console
-      - --template=/usr/local/e2e-aws-console
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
+      - --lease-server=http://boskos
+      - --secret-dir=/usr/local/e2e-aws-console-cluster-profile
+      - --secret-dir=/usr/local/pull-secret
+      - --target=e2e-aws-console
+      - --template=/usr/local/e2e-aws-console
       command:
       - ci-operator
       env:
@@ -3297,7 +3298,7 @@ periodics:
         - secret:
             name: cluster-secrets-aws
     - configMap:
-        name: prow-job-cluster-launch-installer-console
+        name: prow-job-cluster-launch-installer-custom-test-image
       name: job-definition
     - name: pull-secret
       secret:
