Add rehearsed labels for libvirt e2e

--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -1089,6 +1089,8 @@ presubmits:
     - master
     context: ci/prow/e2e-libvirt
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-installer-master-e2e-libvirt
     optional: true
     rerun_command: /test e2e-libvirt
