templates: fix check for unset variable
https://github.com/openshift/release/pull/6718 added `set -u` to scripts
that access unset variables.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
@@ -529,7 +529,7 @@ objects:
         fi
 
         # TODO: Replace with a more concise manifest injection approach
-        if [[ -n "${CLUSTER_NETWORK_MANIFEST}" ]]; then
+        if [[ -n "${CLUSTER_NETWORK_MANIFEST:-}" ]]; then
             openshift-install --dir=/tmp/artifacts/installer/ create manifests
             echo "${CLUSTER_NETWORK_MANIFEST}" > /tmp/artifacts/installer/manifests/cluster-network-03-config.yml
         fi
