Add image job for csi-external-resizer

--- a/ci-operator/config/openshift/csi-external-resizer/openshift-csi-external-resizer-master.yaml
+++ b/ci-operator/config/openshift/csi-external-resizer/openshift-csi-external-resizer-master.yaml
@@ -1,6 +1,6 @@
 base_images:
   base:
-    name: "4.2"
+    name: "4.3"
     namespace: ocp
     tag: base
 build_root:
@@ -18,10 +18,9 @@ images:
       - "0"
       paths: null
   to: csi-external-resizer
-# No images, it's not to be released in OCP yet
-#promotion:
-#  name: "4.2"
-#  namespace: ocp
+promotion:
+  name: "4.3"
+  namespace: ocp
 resources:
   '*':
     limits:
@@ -30,7 +29,7 @@ resources:
       cpu: 100m
       memory: 200Mi
 tag_specification:
-  name: "4.2"
+  name: "4.3"
   namespace: ocp
 tests:
 - as: unit
