openstack: Allow bash syntax in script
The double square bracket is not POSIX-sh

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
@@ -285,10 +285,10 @@ objects:
       - name: INSTALL_INITIAL_RELEASE
       - name: RELEASE_IMAGE_INITIAL
       command:
-      - /bin/sh
+      - /bin/bash
       - -c
       - |
-        #!/bin/sh
+        #!/bin/bash
         set -euo pipefail
 
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/setup-success; else touch /tmp/exit /tmp/setup-failed; fi; exit "${rc}"' EXIT
