add openshift-priv/ci-experiment-origin in tide's config

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -902,6 +902,7 @@ tide:
     - openshift/file-integrity-operator
     - openshift-kni/performance-addon-operators
     - openshift-kni/cnf-features-deploy
+    - openshift-priv/ci-experiment-origin
   - labels:
     - lgtm
     - approved
