Align the test entry point to the new makefile rule for running ci tests.
Signed-off-by: Federico Paolinelli <fpaoline@redhat.com>

--- a/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
@@ -27,6 +27,6 @@ tests:
   container:
     from: src
 - as: e2e-gcp
-  commands: make feature-deploy && make functests
+  commands: make functests-on-ci
   openshift_installer_src:
     cluster_profile: gcp
