--- a/ci-operator/jobs/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master-presubmits.yaml
@@ -89,7 +89,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-gcp
         - name: TEST_COMMAND
-          value: make feature-deploy && make functests
+          value: make functests-on-ci
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
