Remove branch protections for openshift/ocs-operator

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -144,6 +144,8 @@ branch-protection:
           required_status_checks:
             contexts:
             - ci.ext.devshift.net PR build
+        ocs-operator:
+          protect: false
         openshift-azure:
           restrictions:
             teams:
