add -eou pipefail to remaining job templates

--- a/ci-operator/templates/openshift/endurance/endurance-install.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-install.yaml
@@ -80,7 +80,8 @@ objects:
       - /bin/bash
       - -c
       - |
-        #!/bin/bash -x
+        #!/bin/bash
+        set -euo pipefail
         
         # fetch the oc binary so we can talk to the cluster.  
         export PATH=$PATH:/tmp/shared/bin
@@ -153,7 +154,8 @@ objects:
       - /bin/bash
       - -c
       - |
-        #!/bin/bash -x
+        #!/bin/bash
+        set -euo pipefail
 
         export PATH=$PATH:/tmp/shared/bin
 
@@ -377,7 +379,8 @@ objects:
       - /bin/sh
       - -c
       - |
-        #!/bin/sh -x
+        #!/bin/bash
+        set -euo pipefail
 
         export PATH=$PATH:/tmp/shared/bin
 
