--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
@@ -445,6 +445,8 @@ objects:
       - -c
       - |
         #!/bin/bash
+        set -euo pipefail
+
         function queue() {
           local TARGET="${1}"
           shift
