--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-upgrade.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-upgrade.yaml
@@ -260,6 +260,8 @@ objects:
       - -c
       - |
         #!/bin/bash
+        set -euo pipefail
+
         function teardown() {
           set +e
           touch /tmp/shared/exit
