--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
@@ -226,8 +226,10 @@ objects:
       - /bin/sh
       - -c
       - |
-        #!/bin/sh
-        set -ex
+        #!/bin/bash
+        set -euo pipefail
+        set -x
+        
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/setup-success; else touch /tmp/exit /tmp/setup-failed; fi; exit "${rc}"' EXIT
         trap 'CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi' TERM
 
@@ -515,6 +517,8 @@ objects:
       - -c
       - |
         #!/bin/bash
+        set -euo pipefail
+
         function queue() {
           local TARGET="${1}"
           shift
