--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-src.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-src.yaml
@@ -333,8 +333,9 @@ objects:
       - /bin/sh
       - -c
       - |
-        #!/bin/sh
-        set -e
+        #!/bin/bash
+        set -euo pipefail
+        
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/setup-success; else touch /tmp/exit /tmp/setup-failed; fi; exit "${rc}"' EXIT
         trap 'CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi' TERM
 
@@ -1073,6 +1074,7 @@ objects:
       - -c
       - |
         #!/bin/bash
+        set -euo pipefail
 
         function queue() {
           local TARGET="${1}"
