--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-ansible.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-ansible.yaml
@@ -255,6 +255,8 @@ objects:
       - -c
       - |
         #!/bin/bash
+        set -euo pipefail
+
         function teardown() {
           set +e
           touch /tmp/shared/exit
