--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-jenkins.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-jenkins.yaml
@@ -312,6 +312,8 @@ objects:
       - -c
       - |
         #!/bin/bash
+        set -euo pipefail
+
         function teardown() {
           set +e
           touch /tmp/shared/exit
