--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e.yaml
@@ -216,6 +216,8 @@ objects:
       - -c
       - |
         #!/bin/bash
+        set -euo pipefail
+
         function teardown() {
           set +e
           touch /tmp/shared/exit
