--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-src.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-src.yaml
@@ -199,6 +199,8 @@ objects:
       - -c
       - |
         #!/bin/bash
+        set -euo pipefail
+
         function teardown() {
           set +e
           touch /tmp/shared/exit
