Revert "Merge pull request #6710 from hamzy/change-ppc64le-ports-redux"
This reverts commit c0af72f77f89dfdcd78ee971b030ed611a733646, reversing
changes made to 55b9f4d74d74d5254aa6f27226b70d6cde5b7f2c.

Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/core-services/sshd-bastion/ppc64le/deployment.yaml
+++ b/core-services/sshd-bastion/ppc64le/deployment.yaml
@@ -17,24 +17,15 @@ items:
     - name: openstack-auth
       port: 5000
       targetPort: openstack-auth
-    - name: openshift-api
+    - name: api
       port: 6443
-      targetPort: openshift-api
-    - name: openstack-nova
-      port: 8774
-      targetPort: openstack-nova
-    - name: openstack-cinder
-      port: 8776
-      targetPort: openstack-cinder
-    - name: openstack-swift
-      port: 8080
-      targetPort: openstack-swift
-    - name: openstack-glance
-      port: 9292
-      targetPort: openstack-glance
-    - name: openstack-neutron
-      port: 9696
-      targetPort: openstack-neutron
+      targetPort: api
+    - name: http
+      port: 80
+      targetPort: http
+    - name: https
+      port: 443
+      targetPort: https
     type: ClusterIP
 - apiVersion: apps/v1
   kind: Deployment
@@ -71,17 +62,13 @@ items:
             - name: ssh
               containerPort: 2222
             - name: openstack-auth
-              containerPort: 3333
-            - name: openshift-api
-              containerPort: 4444
-            - name: openstack-nova
               containerPort: 5555
-            - name: openstack-cinder
+            - name: api
               containerPort: 6666
-            - name: openstack-glance
-              containerPort: 7777
-            - name: openstack-neutron
+            - name: http
               containerPort: 8888
+            - name: https
+              containerPort: 4444
           volumeMounts:
           - name: authorized-keys
             mountPath: /keys/authorized
