Installer aws-upi template to set mastersScheduable false
Prior to this change, the aws upi template set the compute replicas to
zero but did not set masterScheduable to false. This caused the master
nodes to be schedulable.

This change sets masterScheduable to false to maintain the same
configuration we are asking of our customers in our documentation.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1103,6 +1103,7 @@ objects:
           openshift-install --dir=/tmp/artifacts/installer create manifests
           rm -f /tmp/artifacts/installer/openshift/99_openshift-cluster-api_master-machines-*.yaml
           rm -f /tmp/artifacts/installer/openshift/99_openshift-cluster-api_worker-machineset-*.yaml
+          sed -i "s;mastersSchedulable: true;mastersSchedulable: false;g" /tmp/artifacts/installer/manifests/cluster-scheduler-02-config.yml
         elif [[ "${CLUSTER_TYPE}" == "gcp" ]]; then
           base_domain="${BASE_DOMAIN:-origin-ci-int-gce.dev.openshift.com}"
           cat > /tmp/artifacts/installer/install-config.yaml << EOF
