Fixing the following errors: spec.ports[3].targetPort: Invalid value: \"openstack-cinder\": must be no more than 15 characters spec.ports[5].targetPort: Invalid value: \"openstack-glance\": must be no more than 15 characters spec.ports[6].targetPort: Invalid value: \"openstack-neutron\": must be no more than 15 characters

--- a/core-services/sshd-bastion/ppc64le/deployment.yaml
+++ b/core-services/sshd-bastion/ppc64le/deployment.yaml
@@ -14,27 +14,27 @@ items:
       app: prow
       component: sshd
     ports:
-    - name: openstack-auth
+    - name: ost-auth
       port: 5000
-      targetPort: openstack-auth
-    - name: openshift-api
+      targetPort: ost-auth
+    - name: osh-api
       port: 6443
-      targetPort: openshift-api
-    - name: openstack-nova
+      targetPort: osh-api
+    - name: ost-nova
       port: 8774
-      targetPort: openstack-nova
-    - name: openstack-cinder
+      targetPort: ost-nova
+    - name: ost-cinder
       port: 8776
-      targetPort: openstack-cinder
-    - name: openstack-swift
+      targetPort: ost-cinder
+    - name: ost-swift
       port: 8080
-      targetPort: openstack-swift
-    - name: openstack-glance
+      targetPort: ost-swift
+    - name: ost-glance
       port: 9292
-      targetPort: openstack-glance
-    - name: openstack-neutron
+      targetPort: ost-glance
+    - name: ost-neutron
       port: 9696
-      targetPort: openstack-neutron
+      targetPort: ost-neutron
     type: ClusterIP
 - apiVersion: apps/v1
   kind: Deployment
@@ -70,17 +70,17 @@ items:
           ports:
             - name: ssh
               containerPort: 2222
-            - name: openstack-auth
+            - name: ost-auth
               containerPort: 3333
-            - name: openshift-api
+            - name: osh-api
               containerPort: 4444
-            - name: openstack-nova
+            - name: ost-nova
               containerPort: 5555
-            - name: openstack-cinder
+            - name: ost-cinder
               containerPort: 6666
-            - name: openstack-glance
+            - name: ost-glance
               containerPort: 7777
-            - name: openstack-neutron
+            - name: ost-neutron
               containerPort: 8888
           volumeMounts:
           - name: authorized-keys
