hypershift-toolkit: make kube conformance test optional

--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-master-presubmits.yaml
@@ -51,7 +51,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )images,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - master
     context: ci/prow/kube-conformance-aws
@@ -62,6 +62,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-hypershift-toolkit-master-kube-conformance-aws
+    optional: true
     rerun_command: /test kube-conformance-aws
     spec:
       containers:
