--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
@@ -454,7 +454,7 @@ objects:
             LIVE="$(jobs | wc -l)"
           done
           echo "${@}"
-          if [[ -n "${FILTER}" ]]; then
+          if [[ -n "${FILTER:-}" ]]; then
             "${@}" | "${FILTER}" >"${TARGET}" &
           else
             "${@}" >"${TARGET}" &
