--- a/core-services/supplemental-ci-images/release.yaml
+++ b/core-services/supplemental-ci-images/release.yaml
@@ -65,6 +65,10 @@ spec:
     from: {"kind":"DockerImage","name":"docker.io/openshift/origin-release:nodejs-8-browser-tests"}
     referencePolicy: {"type": "Local"}
     importPolicy: {"scheduled": true}
+  - name: tectonic-console-builder-v19
+    from: {"kind":"DockerImage","name":"quay.io/coreos/tectonic-console-builder:v19"}
+    referencePolicy: {"type": "Local"}
+    importPolicy: {"scheduled": true}
   - name: tectonic-console-builder-v18
     from: {"kind":"DockerImage","name":"quay.io/coreos/tectonic-console-builder:v18"}
     referencePolicy: {"type": "Local"}
