Build ci-secret-bootstrap image

--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -215,6 +215,14 @@ images:
         - destination_dir: .
           source_path: /go/bin/private-org-sync
   to: private-org-sync
+- context_dir: images/ci-secret-bootstrap
+  from: centos8
+  inputs:
+    bin:
+      paths:
+      - destination_dir: .
+        source_path: /go/bin/ci-secret-bootstrap
+  to: ci-secret-bootstrap
 promotion:
   namespace: ci
   tag: latest
