ipi-deprovision: build off of CentOS, use installer
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -7,12 +7,12 @@ base_images:
     name: release
     namespace: openshift
     tag: golang-1.13
-  hive:
-    name: hive-v4.0
-    namespace: openshift
-    tag: 'hive'
+  installer:
+    name: "4.4"
+    namespace: ocp
+    tag: installer
   cli:
-    name: "4.2"
+    name: "4.4"
     namespace: ocp
     tag: cli
   centos8:
@@ -116,12 +116,16 @@ images:
         source_path: /go/bin/determinize-ci-operator
   to: determinize-ci-operator
 - dockerfile_path: images/ipi-deprovision/Dockerfile
-  from: hive
+  from: centos8
   inputs:
     cli:
       paths:
       - destination_dir: usr/bin
         source_path: /usr/bin/oc
+    installer:
+      paths:
+      - destination_dir: usr/bin
+        source_path: /usr/bin/openshift-install
   to: ipi-deprovision
 - context_dir: images/applyconfig
   from: os
