Adds build configurations for whereabouts-cni and route-override-cni

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -619,6 +619,7 @@ tide:
     - openshift/prometheus-operator
     - openshift/prom-label-proxy
     - openshift/rbac-permissions-operator
+    - openshift/route-override-cni
     - openshift/router
     - openshift/runtime-utils
     - openshift/sdn
@@ -630,6 +631,7 @@ tide:
     - openshift/template-service-broker-operator
     - openshift/thanos
     - openshift/vertical-pod-autoscaler-operator
+    - openshift/whereabouts-cni
     - openshift/windows-machine-config-operator
     - operator-framework/ghostunnel
     - operator-framework/hadoop
@@ -873,6 +875,7 @@ tide:
     - openshift/release
     - openshift/release-controller
     - openshift/rhcos-tools
+    - openshift/route-override-cni
     - openshift/router
     - openshift/runtime-utils
     - openshift-s2i/s2i-wildfly
@@ -891,6 +894,7 @@ tide:
     - openshift/thanos
     - openshift/verification-tests
     - openshift/vertical-pod-autoscaler-operator
+    - openshift/whereabouts-cni
     - openshift/windows-machine-config-operator
     - openshift-knative/serverless-operator
     - operator-framework/ghostunnel
