--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -2251,6 +2251,8 @@ plugins:
   - approve
   openshift/rhcos-tools:
   - approve
+  openshift/route-override-cni:
+  - approve
   openshift/router:
   - approve
   openshift/runtime-utils:
@@ -2288,6 +2290,8 @@ plugins:
   openshift/verification-tests:
   - approve
   openshift/vertical-pod-autoscaler-operator:
+  - approve
+  openshift/whereabouts-cni:
   - approve
   openshift/windows-machine-config-operator:
   - approve
